--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clone - Disney+</title>
-    <link rel="stylesheet" href="dist/css/style.css">
+    <link rel="stylesheet" href="./dist/css/style.css">
 </head>
 <body>
     <section class="hero">
         <div class="hero__content">
             <h1 class="hero__content__branding">
-                <img src="dist/img/disneyplus.svg" alt="Disney+">
+                <img src="./dist/img/disneyplus.svg" alt="Disney+">
             </h1>
             <h3 class="title--small">As melhores histórias em um só lugar.</h3>
             <p>
