--- a/index.html
+++ b/index.html
@@ -12,10 +12,29 @@
             <h1 class="hero__content__branding">
                 <img src="./dist/img/disneyplus.svg" alt="Disney+">
             </h1>
-            <h3 class="title--small">As melhores histórias em um só lugar.</h3>
+            <h3 class="title--small">
+                As melhores histórias em um só lugar.
+            </h3>
             <p>
                 <a href="#" class="link-text">Assinar o Disney+</a> <br>
-                <span class="text">R1 27,90/mês o R1 279,90/ano à vista</span>
+                <span class="text">
+                    R1 27,90/mês o R1 279,90/ano à vista*
+                </span>
+            </p>
+            <ul class="hero__content__combos">
+                <li class="hero__content__combos__combo">
+                    <img src="dist/img/logos/disney_star_plus.png" alt="Disney+ Star Plus">
+                    <button>ASSINE AGORA</button>
+                    <span class="text">R$ 45,90/mês*</span>
+                </li>
+                <li class="hero__content__combos__combo">
+                    <img src="dist/img/logos/disney_star_plus_starzplay.png" alt="Disney+ Hulu">
+                    <button>ASSINE AGORA</button>
+                    <span class="text">R$ 55,90/mês*</span>
+                </li>
+            </ul>
+            <p class="text--small">
+                *O preço pode variar caso a assinatira seja feita através de outras plataformas.
             </p>
         </div>
     </section>
