--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
             <ul class="hero__content__combos">
                 <li class="hero__content__combos__combo">
                     <img src="dist/img/logos/disney_star_plus.png" alt="Disney+ Star Plus">
-                    <button>ASSINE AGORA</button>
+                    <button class="button">ASSINE AGORA</button>
                     <span class="text">R$ 45,90/mês*</span>
                 </li>
                 <li class="hero__content__combos__combo">
                     <img src="dist/img/logos/disney_star_plus_starzplay.png" alt="Disney+ Hulu">
-                    <button>ASSINE AGORA</button>
+                    <button class="button">ASSINE AGORA</button>
                     <span class="text">R$ 55,90/mês*</span>
                 </li>
             </ul>
@@ -38,5 +38,121 @@
             </p>
         </div>
     </section>
+
+    <section class="shows">
+
+        <nav class="shows__tabs">
+            <button data-tab-button="em_breve" class="shows__tabs__button shows__tabs__button--is-active">
+                Em breve
+            </button>
+            <button data-tab-button="mais_populares" class="shows__tabs__button">
+                Mais populares
+            </button>
+            <button data-tab-button="mais_no_star" class="shows__tabs__button">
+                Mais no Star+
+            </button>
+        </nav>
+
+        <ul data-tab-id="em_breve" class="shows__list shows__list--is-active">
+            <li class="shows__list__item">
+                <img src="./dist/img/em_breve/spidey.jpg" alt="Spidey">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/img/em_breve/lobisomem.jpg" alt="Lobisomem">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/img/em_breve/sem_limites.jpg" alt="Sem limites">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/img/em_breve/the_santa_clauses.jpg" alt="The Santa Clauses">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/img/em_breve/willow.jpg" alt="Willow">
+            </li>
+        </ul>
+
+        <ul data-tab-id="mais_populares" class="shows__list">
+            <li class="shows__list__item">
+                <img src="./dist/img/mais_populares/bluey.jpg" alt="Bluey">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/img/mais_populares/cavaleira_da_lua.jpg" alt="Cavaleira da lua">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/img/mais_populares/o_incrivel_dr_pol.jpg" alt="O inscrivel dr pol">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/img/mais_populares/obi_wan.jpg" alt="Obi wan">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/img/mais_populares/red.jpg" alt="Red">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/img/mais_populares/tudo_igual_sqn.jpg" alt="Tudo igual sqn">
+            </li>
+        </ul>
+
+        <ul data-tab-id="mais_no_star" class="shows__list">
+            <li class="shows__list__item">
+                <img src="./dist/img/mais_no_star_plus/belair.jpg" alt="Belair">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/img/mais_no_star_plus/libertadores.jpg" alt="Libertadores">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/img/mais_no_star_plus/nba.jpg" alt="Nba">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/img/mais_no_star_plus/os_simpson.jpg" alt="Os simpson">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/img/mais_no_star_plus/premier_league.jpg" alt="Premier league">
+            </li>
+            <li class="shows__list__item">
+                <img src="./dist/img/mais_no_star_plus/the_kardashians.jpg" alt="The kardashians">
+            </li>
+        </ul>
+    </section>
+
+    <section class="plans">
+        <h2 class="title--big">Escolha seu plano</h2>
+
+        <ul class="plans__list">
+            <li class="plans__list__item">
+                <img src="./dist/img/logos/disneyplus_underline.png" alt="Disney+">
+                <strong class="title--small">R$ 27,90/mês*</strong>
+                <p class="text--big">
+                    No Disney+ você encontra as útlimas estreias de cinema, originais e clássicos inesquecíveis.
+                </p>
+                <button class="button">Assine agora</button>
+            </li>
+
+            <li class="plans__list__item">
+                <img src="./dist/img/logos/disney_star_plus_sm.png" alt="Disney+">
+                <strong class="title--small">R$ 45,90/mês*</strong>
+                <p class="text--big">
+                    Assine Disney+ e Star+ juntos. 
+                    Economize e aproveite agora os dois serviços por um preço único.
+                </p>
+                <button class="button">Assine agora</button>
+            </li>
+
+            <li class="plans__list__item">
+                <img src="./dist/img/logos/disney_star_plus_starzplay_underline.png" alt="Disney+">
+                <strong class="title--small">R$ 55,90/mês*</strong>
+                <p class="text--big">
+                    Disney+, Star+ e Starzplay em um plano especial. 
+                    Assine agora os três serviços juntos.
+                </p>
+                <button class="button">Assine agora</button>
+            </li>
+        </ul>
+        <p class="text--small">
+            *O preço pode variar caso a assinatira seja feita através de outras plataformas.
+        </p>
+
+    </section>
+
+    <script src="src/js/script.js"></script>
 </body>
 </html>
