--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
             </p>
             <ul class="hero__content__combos">
                 <li class="hero__content__combos__combo">
-                    <img src="dist/img/logos/disney_star_plus.png" alt="Disney+ Star Plus">
+                    <img src="./dist/img/logos/disney_star_plus.png" alt="Disney+ Star Plus">
                     <button class="button">ASSINE AGORA</button>
                     <span class="text">R$ 45,90/mês*</span>
                 </li>
                 <li class="hero__content__combos__combo">
-                    <img src="dist/img/logos/disney_star_plus_starzplay.png" alt="Disney+ Hulu">
+                    <img src="./dist/img/logos/disney_star_plus_starzplay.png" alt="Disney+ Hulu">
                     <button class="button">ASSINE AGORA</button>
                     <span class="text">R$ 55,90/mês*</span>
                 </li>
@@ -171,7 +171,7 @@
     </section>
 
     <section class="image-text-section">
-        <img src="dist/img/tv_pc_tablet_celular.png" alt="Imagem com TV, Computador, tablet e celular">
+        <img src="./dist/img/tv_pc_tablet_celular.png" alt="Imagem com TV, Computador, tablet e celular">
         <div class="image-text-section__text_container">
             <h2 class="title">Assista do seu jeito</h2>
             <p class="text--big">
@@ -185,7 +185,7 @@
     <section class="image-text-section image-text-section--image-full-width">
         <picture>
             <source media="(max-width: 768px)" srcset="dist/img/fundo_rei_leao_celular.png">
-            <img src="dist/img/fundo_rei_leao.png" alt="Rei Leão">
+            <img src="./dist/img/fundo_rei_leao.png" alt="Rei Leão">
             <div class="image-text-section__text_container image-text-section--image-full-width__text_container">
                 <h2 class="title">Baixe filmes e séries</h2>
                 <p class="text--big">
@@ -201,7 +201,7 @@
         <h2 class="title">Disponível nos seus dispositivos favoritos</h2>
         <ul class="available-devices__list">
             <li class="available-devices__list__item">
-                <img src="dist/img/dispositivos/computador.png" alt="Computador">
+                <img src="./dist/img/dispositivos/computador.png" alt="Computador">
                 <h4 class="title--small">Computador</h4>
                 <ul class="text">
                     <li>
@@ -216,7 +216,7 @@
                 </ul>
             </li>
             <li class="available-devices__list__item">
-                <img src="dist/img/dispositivos/tv.png" alt="TV">
+                <img src="./dist/img/dispositivos/tv.png" alt="TV">
                 <h4 class="title--small">TV</h4>
                 <ul class="text">
                     <li>
@@ -243,7 +243,7 @@
                 </ul>
             </li>
             <li class="available-devices__list__item">
-                <img src="dist/img/dispositivos/videogames.png" alt="Videogames">
+                <img src="./dist/img/dispositivos/videogames.png" alt="Videogames">
                 <h4 class="title--small">Videogames</h4>
                 <ul class="text">
                     <li>
@@ -264,7 +264,7 @@
                 </ul>
             </li>
             <li class="available-devices__list__item">
-                <img src="dist/img/dispositivos/celular.png" alt="Celular">
+                <img src="./dist/img/dispositivos/celular.png" alt="Celular">
                 <h4 class="title--small">Celulares e tablets</h4>
                 <ul class="text">
                     <li>
@@ -336,11 +336,11 @@
 
     <footer class="footer">
         <div class="footer__container">
-            <img class="footer__logo" src="dist/img/disneyplus.svg" alt="Disney+">
+            <img class="footer__logo" src="./dist/img/disneyplus.svg" alt="Disney+">
             <ul class="footer__links">
                 <li class="footer__links__item">
                     <div class="language-selector">
-                        <img src="dist/img/icones/globe.svg" alt="globo do mundo">
+                        <img src="./dist/img/icones/globe.svg" alt="globo do mundo">
                         <select>
                             <option value="pt-br" selected>Português (Brasil)</option>
                             <option value="en-us">English (US)</option>
@@ -381,6 +381,6 @@
         </div>
     </footer>
 
-    <script src="src/js/script.js"></script>
+    <script src="./dist/js/script.js"></script>
 </body>
 </html>
