--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clone - Disney+</title>
-    <link rel="stylesheet" href="./dist/css/style.css">
+    <link rel="stylesheet" href="dist/css/style.css">
 </head>
 
 <body>
     <header class="header">
         <div class="header__container">
             <h1>
-                <img class="header__logo" src="./dist/img/disneyplus.svg" alt="Disney+">
+                <img class="header__logo" src="dist/img/disneyplus.svg" alt="Disney+">
             </h1>
             <ul class="header__links">
                 <li class="header__links__item">
@@ -28,7 +28,7 @@
     <section class="hero">
         <div class="hero__content">
             <h1 class="hero__content__branding">
-                <img src="./dist/img/disneyplus.svg" alt="Disney+">
+                <img src="dist/img/disneyplus.svg" alt="Disney+">
             </h1>
             <h3 class="title--small">
                 As melhores histórias em um só lugar.
@@ -41,12 +41,12 @@
             </p>
             <ul class="hero__content__combos">
                 <li class="hero__content__combos__combo">
-                    <img src="./dist/img/logos/disney_star_plus.png" alt="Disney+ Star Plus">
+                    <img src="dist/img/logos/disney_star_plus.png" alt="Disney+ Star Plus">
                     <button class="button">ASSINE AGORA</button>
                     <span class="text">R$ 45,90/mês*</span>
                 </li>
                 <li class="hero__content__combos__combo">
-                    <img src="./dist/img/logos/disney_star_plus_starzplay.png" alt="Disney+ Hulu">
+                    <img src="dist/img/logos/disney_star_plus_starzplay.png" alt="Disney+ Hulu">
                     <button class="button">ASSINE AGORA</button>
                     <span class="text">R$ 55,90/mês*</span>
                 </li>
@@ -73,61 +73,61 @@
 
         <ul data-tab-id="em_breve" class="shows__list shows__list--is-active">
             <li class="shows__list__item">
-                <img src="./dist/img/em_breve/spidey.jpg" alt="Spidey">
+                <img src="dist/img/em_breve/spidey.jpg" alt="Spidey">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/img/em_breve/lobisomem.jpg" alt="Lobisomem">
+                <img src="dist/img/em_breve/lobisomem.jpg" alt="Lobisomem">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/img/em_breve/sem_limites.jpg" alt="Sem limites">
+                <img src="dist/img/em_breve/sem_limites.jpg" alt="Sem limites">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/img/em_breve/the_santa_clauses.jpg" alt="The Santa Clauses">
+                <img src="dist/img/em_breve/the_santa_clauses.jpg" alt="The Santa Clauses">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/img/em_breve/willow.jpg" alt="Willow">
+                <img src="dist/img/em_breve/willow.jpg" alt="Willow">
             </li>
         </ul>
 
         <ul data-tab-id="mais_populares" class="shows__list">
             <li class="shows__list__item">
-                <img src="./dist/img/mais_populares/bluey.jpg" alt="Bluey">
+                <img src="dist/img/mais_populares/bluey.jpg" alt="Bluey">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/img/mais_populares/cavaleira_da_lua.jpg" alt="Cavaleira da lua">
+                <img src="dist/img/mais_populares/cavaleira_da_lua.jpg" alt="Cavaleira da lua">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/img/mais_populares/o_incrivel_dr_pol.jpg" alt="O inscrivel dr pol">
+                <img src="dist/img/mais_populares/o_incrivel_dr_pol.jpg" alt="O inscrivel dr pol">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/img/mais_populares/obi_wan.jpg" alt="Obi wan">
+                <img src="dist/img/mais_populares/obi_wan.jpg" alt="Obi wan">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/img/mais_populares/red.jpg" alt="Red">
+                <img src="dist/img/mais_populares/red.jpg" alt="Red">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/img/mais_populares/tudo_igual_sqn.jpg" alt="Tudo igual sqn">
+                <img src="dist/img/mais_populares/tudo_igual_sqn.jpg" alt="Tudo igual sqn">
             </li>
         </ul>
 
         <ul data-tab-id="mais_no_star" class="shows__list">
             <li class="shows__list__item">
-                <img src="./dist/img/mais_no_star_plus/belair.jpg" alt="Belair">
+                <img src="dist/img/mais_no_star_plus/belair.jpg" alt="Belair">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/img/mais_no_star_plus/libertadores.jpg" alt="Libertadores">
+                <img src="dist/img/mais_no_star_plus/libertadores.jpg" alt="Libertadores">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/img/mais_no_star_plus/nba.jpg" alt="Nba">
+                <img src="dist/img/mais_no_star_plus/nba.jpg" alt="Nba">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/img/mais_no_star_plus/os_simpson.jpg" alt="Os simpson">
+                <img src="dist/img/mais_no_star_plus/os_simpson.jpg" alt="Os simpson">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/img/mais_no_star_plus/premier_league.jpg" alt="Premier league">
+                <img src="dist/img/mais_no_star_plus/premier_league.jpg" alt="Premier league">
             </li>
             <li class="shows__list__item">
-                <img src="./dist/img/mais_no_star_plus/the_kardashians.jpg" alt="The kardashians">
+                <img src="dist/img/mais_no_star_plus/the_kardashians.jpg" alt="The kardashians">
             </li>
         </ul>
     </section>
@@ -137,7 +137,7 @@
 
         <ul class="plans__list">
             <li class="plans__list__item">
-                <img src="./dist/img/logos/disneyplus_underline.png" alt="Disney+">
+                <img src="dist/img/logos/disneyplus_underline.png" alt="Disney+">
                 <strong class="title--small">R$ 27,90/mês*</strong>
                 <p class="text--big">
                     No Disney+ você encontra as útlimas estreias de cinema, originais e clássicos inesquecíveis.
@@ -146,7 +146,7 @@
             </li>
 
             <li class="plans__list__item">
-                <img src="./dist/img/logos/disney_star_plus_sm.png" alt="Disney+">
+                <img src="dist/img/logos/disney_star_plus_sm.png" alt="Disney+">
                 <strong class="title--small">R$ 45,90/mês*</strong>
                 <p class="text--big">
                     Assine Disney+ e Star+ juntos.
@@ -156,7 +156,7 @@
             </li>
 
             <li class="plans__list__item">
-                <img src="./dist/img/logos/disney_star_plus_starzplay_underline.png" alt="Disney+">
+                <img src="dist/img/logos/disney_star_plus_starzplay_underline.png" alt="Disney+">
                 <strong class="title--small">R$ 55,90/mês*</strong>
                 <p class="text--big">
                     Disney+, Star+ e Starzplay em um plano especial.
@@ -171,7 +171,7 @@
     </section>
 
     <section class="image-text-section">
-        <img src="./dist/img/tv_pc_tablet_celular.png" alt="Imagem com TV, Computador, tablet e celular">
+        <img src="dist/img/tv_pc_tablet_celular.png" alt="Imagem com TV, Computador, tablet e celular">
         <div class="image-text-section__text_container">
             <h2 class="title">Assista do seu jeito</h2>
             <p class="text--big">
@@ -185,7 +185,7 @@
     <section class="image-text-section image-text-section--image-full-width">
         <picture>
             <source media="(max-width: 768px)" srcset="dist/img/fundo_rei_leao_celular.png">
-            <img src="./dist/img/fundo_rei_leao.png" alt="Rei Leão">
+            <img src="dist/img/fundo_rei_leao.png" alt="Rei Leão">
             <div class="image-text-section__text_container image-text-section--image-full-width__text_container">
                 <h2 class="title">Baixe filmes e séries</h2>
                 <p class="text--big">
@@ -201,7 +201,7 @@
         <h2 class="title">Disponível nos seus dispositivos favoritos</h2>
         <ul class="available-devices__list">
             <li class="available-devices__list__item">
-                <img src="./dist/img/dispositivos/computador.png" alt="Computador">
+                <img src="dist/img/dispositivos/computador.png" alt="Computador">
                 <h4 class="title--small">Computador</h4>
                 <ul class="text">
                     <li>
@@ -216,7 +216,7 @@
                 </ul>
             </li>
             <li class="available-devices__list__item">
-                <img src="./dist/img/dispositivos/tv.png" alt="TV">
+                <img src="dist/img/dispositivos/tv.png" alt="TV">
                 <h4 class="title--small">TV</h4>
                 <ul class="text">
                     <li>
@@ -243,7 +243,7 @@
                 </ul>
             </li>
             <li class="available-devices__list__item">
-                <img src="./dist/img/dispositivos/videogames.png" alt="Videogames">
+                <img src="dist/img/dispositivos/videogames.png" alt="Videogames">
                 <h4 class="title--small">Videogames</h4>
                 <ul class="text">
                     <li>
@@ -264,7 +264,7 @@
                 </ul>
             </li>
             <li class="available-devices__list__item">
-                <img src="./dist/img/dispositivos/celular.png" alt="Celular">
+                <img src="dist/img/dispositivos/celular.png" alt="Celular">
                 <h4 class="title--small">Celulares e tablets</h4>
                 <ul class="text">
                     <li>
@@ -336,11 +336,11 @@
 
     <footer class="footer">
         <div class="footer__container">
-            <img class="footer__logo" src="./dist/img/disneyplus.svg" alt="Disney+">
+            <img class="footer__logo" src="dist/img/disneyplus.svg" alt="Disney+">
             <ul class="footer__links">
                 <li class="footer__links__item">
                     <div class="language-selector">
-                        <img src="./dist/img/icones/globe.svg" alt="globo do mundo">
+                        <img src="dist/img/icones/globe.svg" alt="globo do mundo">
                         <select>
                             <option value="pt-br" selected>Português (Brasil)</option>
                             <option value="en-us">English (US)</option>
@@ -381,6 +381,6 @@
         </div>
     </footer>
 
-    <script src="./dist/js/script.js"></script>
+    <script src="dist/js/script.js"></script>
 </body>
 </html>
