--- a/index.html
+++ b/index.html
@@ -292,7 +292,20 @@
                 </div>
 
                 <div class="faq__questions__item__answer text--big">
-                    Resposta.
+                    O Disney+ oferece:
+                    <ul style="margin-top: 10px;">
+                        <li style="list-style: disc; margin-left: 30px;margin-top: 10px;">Experiência de entretenimento exclusiva.</li>
+
+                        <li style="list-style: disc; margin-left: 30px;margin-top: 10px;">As melhores histórias da Disney, Pixar, Marvel, Star Wars e National Geographic, tudo em um só lugar.</li>
+
+                        <li style="list-style: disc; margin-left: 30px;margin-top: 10px;">Downloads ilimitados em até 10 dispositivos compatíveis.</li>
+
+                        <li style="list-style: disc; margin-left: 30px;margin-top: 10px;">Mais de 300 títulos em 4K UHD e HDR.</li>
+
+                        <li style="list-style: disc; margin-left: 30px;margin-top: 10px;">A possibilidade de assistir em até 4 dispositivos compatíveis simultaneamente sem custo adicional.</li>
+
+                        <li style="list-style: disc; margin-left: 30px;margin-top: 10px;">IMAX Enhanced: disponível para alguns títulos da Marvel em dispositivos compatíveis com o Disney+.</li>
+                    </ul>
                 </div>
             </li>
 
@@ -301,7 +314,20 @@
                     Já tem o Disney+ ou o Star+ e quer o Combo+?
                 </div>
                 <div class="faq__questions__item__answer text--big">
-                    Resposta.
+                    Ao assinar o Combo+:
+                    <ul style="margin-top: 10px; margin-bottom: 10px;">
+                        <li style="list-style: disc; margin-left: 30px;margin-top: 10px;">O valor da sua assinatura existente será descontado do preço do Combo+.</li>
+
+                        <li style="list-style: disc; margin-left: 30px;margin-top: 10px;">Se você assina o plano mensal, o valor que você paga mensalmente será descontado do preço do Combo+.</li>
+
+                        <li style="list-style: disc; margin-left: 30px;margin-top: 10px;">Se você tem uma assinatura anual do Disney+ cobrada diretamente pelo Disney+, não é possível mudar para o Combo+ no momento. Entre em contato com o suporte do Disney+ para conhecer suas opções.</li>
+
+                        <li style="list-style: disc; margin-left: 30px;margin-top: 10px;">Você vai receber um e-mail com os valores detalhados assim que finalizar o pagamento.</li>
+
+                        <li style="list-style: disc; margin-left: 30px;margin-top: 10px;">Lembre-se: você pode cancelar a assinatura quando quiser.</li>
+
+                    </ul>
+                    No momento, apenas a assinatura mensal do Combo+ está disponível.
                 </div>
             </li>
 
@@ -310,7 +336,7 @@
                     Quais formas de pagamento posso utilizar?
                 </div>
                 <div class="faq__questions__item__answer text--big">
-                    Resposta.
+                    Você pode utilizar: cartão de débito, cartão de crédito, PayPal, Mercado Pago, e também empresas parceiras como Google Play Store, App Store da Apple; Mercado Livre e provedores locais de TV, telefonia e internet.
                 </div>
             </li>
 
@@ -319,7 +345,7 @@
                     Como posso ver conteúdo com classificação indicativa até 16 e 18?
                 </div>
                 <div class="faq__questions__item__answer text--big">
-                    Resposta.
+                    Para poder acessar o catálogo completo que inclui conteúdo com classificação indicativa até 16 e 18, todos os usuários do Disney+ na América Latina devem atualizar as configurações de controle parental do perfil. É possível restringir o conteúdo de cada perfil e também adicionar um PIN de bloqueio. Os usuários que preferirem manter a configuração atual vão continuar aproveitando o Disney+ com a classificação indicativa até 14, podendo alterá-la a qualquer momento em "Editar Perfis".
                 </div>
             </li>
 
@@ -328,7 +354,8 @@
                     Onde posso assistir ao Disney+?
                 </div>
                 <div class="faq__questions__item__answer text--big">
-                    Resposta.
+                    O aplicativo do Disney+ está disponível em dispositivos móveis, navegadores, videogames, decodificadores e smart TVs. Confira
+                    <a href="https://help.disneyplus.com/article/disneyplus-devices-supported" class="link-text">a lista completa de dispositivos compatíveis na Central de Ajuda</a> 
                 </div>
             </li>
         </ul>
@@ -380,6 +407,11 @@
             </p>
         </div>
     </footer>
+
+    <div class="loader">
+        <div class="carregarBranco">
+        </div>
+    </div>
 
     <script src="./dist/js/script.js"></script>
 </body>
